Fixed menu xbox hover on first invisible game.

--- a/client/ui/styles.css
+++ b/client/ui/styles.css
@@ -247,7 +247,7 @@ select:hover {
 	border: 1px solid #eeeeee;
 }
 
-.controllerHovered {
+.xboxHovered {
 	-webkit-box-shadow: inset 0px 0px 0px 3px #000;
 	-moz-box-shadow: inset 0px 0px 0px 3px #000;
 	box-shadow: inset 0px 0px 0px 3px #000;
